Improvements for MxN Panorama reproducibility reports (#345)
* Show precursor-oriented summaries instead of peptide-oriented
* Show CVs in separate plot
* Click on plots to select a precursor